# pdfQaGemini

./: .cursorignore  .cursorrules  .git-secret-filter.sh  .git-setup-filters.sh  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  1.txt  CLAUDE.md  PROMPTS_USAGE.md  SECURITY.md  SECURITY_SETUP.md  docker-compose.yml  inspektor_model.json  list_models.py  logg  node_files.json  qa_gemini_files.json  run_backend.bat  run_desktop.bat  run_server.bat  run_worker.bat  tree_nodes.json
desktop/: ARCHITECTURE.md  CHATS_FEATURE.md  INSPECTOR_GUIDE.md  MIGRATION_GUIDE.md  MVP_STATUS.md  PROMPTS_FEATURE.md  QUICKSTART.md  README.md  ROI_WORKFLOW.md  env.example  pyproject.toml
desktop/app/: __init__.py  main.py
desktop/app/models/: schemas.py
desktop/cache/: 3705d4d8-1bba-4a9c-ab3f-c9398b3a3085  db1c89f2-447e-460d-a9f0-c995300e4ed0  ea347a62-c573-4c5b-bff3-3fad8c591cb9  f705263a-e350-41e3-aa04-b0584684423e
desktop/pdfQaGemini.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
desktop/tests/: test_agent.py  test_cache.py  test_chat_panel.py  test_gemini_client.py  test_image_viewer.py  test_left_projects_panel.py  test_model_inspector.py  test_pdf_render.py  test_r2_async.py  test_right_context_panel.py  test_schemas.py  test_settings_dialog.py  test_supabase_repo.py  test_trace.py
server/: .dockerignore  Dockerfile  README.md  env.example  pyproject.toml  run_worker.py
server/app/: __init__.py  app_settings.py  config.py  main.py
server/migrations/: 001_enable_realtime.sql  002_fix_server_schema.sql  003_add_api_token.sql  004_create_qa_clients.sql  005_create_qa_clients.sql
server/pdfQaGemini_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+182 files in other folders)
